src/test/kalang-snippets/error/AssignCheck.kl
java.lang.Object cannot be converted to int@2
val iObj as Object = 1;
val i as int = iObj;